--- a/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/160x600/160x600_frame2.html
+++ b/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/160x600/160x600_frame2.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 250px;
+        width: 160px;
+        height: 600px;
         font-family: Arial,Helvetica,sans-serif;
         color: #fff;
       }
@@ -77,20 +77,20 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
-amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameBackground","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
-amo.registerAttribute("frameImage1","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
-amo.registerAttribute("frameImage2","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
-amo.registerAttribute("frameText11", "TEXT", "<div style='top:31px;font-size:18px;line-height:1.1;text-align:center;letter-spacing:-0.4px;width:300px;'>Suddenlink is now available<br>in your area</div>");
+amo.registerAttribute("ctaText","TEXT","Upgrade Now");
+amo.registerAttribute("frameBackground","IMAGE","160x600_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
+amo.registerAttribute("frameImage1","IMAGE","160x600_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
+amo.registerAttribute("frameImage2","IMAGE","160x600_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","160x600_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
+amo.registerAttribute("frameText11", "TEXT", "<div style='top:81px;left:15px;line-height:1.6;font-size:18px;line-height:1.2;letter-spacing:-0.4px;'>Suddenlink is<br>now available<br>in your area</div>");
 amo.registerAttribute("frameText12", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText13", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText21","TEXT","<div style='top:26px;left:15px;line-height:1.6;font-size:18px;'>Power your</div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top:47px;left:15px;line-height:1.6;font-size:18px;'>new home</div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top:83px;left:15px;line-height:1.6;font-size:18px;line-height:1.2;letter-spacing:1px;'>Power your</div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:107px;left:15px;line-height:1.6;font-size:18px;line-height:1.2;letter-spacing:1px;'>new home</div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31", "TEXT", "<div style='top:30px;left:15px;line-height:1.6;font-size:18px;line-height:1;letter-spacing:-0.4px;'>Get our next<br>generation<br>technology.</div>");
-amo.registerAttribute("frameText32", "TEXT", "<div style='top:84px;left:18px;line-height:1.6;font-size:18px;'><span class='AlticeBold'>altice</span> one +</div>");
-amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top:107px;left:18px;line-height:1.6;font-size:18px;letter-spacing:-0.4px;'>1 Gig Internet</div>");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top:92px;left:15px;font-size:18px;line-height:1.1;'>Get our next<br>generation<br>technology.</div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top:150px;left:15px;font-size:18px;letter-spacing:-0.8px;'><span class='AlticeBold'>altice</span> one +</div>");
+amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top:174px;left:15px;font-size:18px;letter-spacing:-1px;'>1 Gig Internet</div>");
 
 </script>
 <!-- End of overrode asset attributes values -->
@@ -125,9 +125,9 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top:211px;
-        left:15px;
-        width:91px;
+      style="top:538px;
+        left:30px;
+        width:100px;
         height:24px;
         font-size:12px;
         color:#fff;
@@ -144,9 +144,9 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top:211px;
-          left:15px;
-          width:91px;
+        style="top:538px;
+          left:30px;
+          width:100px;
           height:24px;
           font-size:12px;
           color:#fff;
@@ -163,8 +163,8 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
   <script type="text/javascript">
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 300,
-      height: 250,
+      width: 160,
+      height: 600,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -173,8 +173,8 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x250_SDL_Logo.png',
-          introLogoImage: 'images/300x250_SDL_Logo.png',
+          logoImage: 'images/160x600_SDL_Logo.png',
+          introLogoImage: 'images/160x600_SDL_Logo.png',
           // priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
@@ -233,7 +233,7 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
             .to('#frame1', (flag==true?{}:{duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame2, [true]);
+                    gsap.delayedCall(1.2, animateFrame3, [true]);
       });
     }, 2000);
   </script>
