--- a/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/320x50/320x50_frame1.html
+++ b/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/320x50/320x50_frame1.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 250px;
+        width: 320px;
+        height: 50px;
         font-family: Arial,Helvetica,sans-serif;
         color: #fff;
       }
@@ -77,20 +77,20 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
-amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameBackground","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
-amo.registerAttribute("frameImage1","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
-amo.registerAttribute("frameImage2","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
-amo.registerAttribute("frameText11", "TEXT", "<div style='top:31px;font-size:18px;line-height:1.1;text-align:center;letter-spacing:-0.4px;width:300px;'>Suddenlink is now available<br>in your area</div>");
+amo.registerAttribute("ctaText","TEXT","Upgrade Now");
+amo.registerAttribute("frameBackground","IMAGE","320x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
+amo.registerAttribute("frameImage1","IMAGE","320x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
+amo.registerAttribute("frameImage2","IMAGE","320x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","320x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
+amo.registerAttribute("frameText11", "TEXT", "<div style='top:9px;left:8px;font-size:13px;line-height:1.1;letter-spacing:-0.5px;'>Suddenlink is now<br>available in your area</div>");
 amo.registerAttribute("frameText12", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText13", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText21","TEXT","<div style='top:26px;left:15px;line-height:1.6;font-size:18px;'>Power your</div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top:47px;left:15px;line-height:1.6;font-size:18px;'>new home</div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top:9px;left:8px;line-height:1.6;font-size:12px;letter-spacing:-0.4px;'>Power your</div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:23px;left:8px;line-height:1.6;font-size:12px;letter-spacing:-0.4px;'>new home</div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31", "TEXT", "<div style='top:30px;left:15px;line-height:1.6;font-size:18px;line-height:1;letter-spacing:-0.4px;'>Get our next<br>generation<br>technology.</div>");
-amo.registerAttribute("frameText32", "TEXT", "<div style='top:84px;left:18px;line-height:1.6;font-size:18px;'><span class='AlticeBold'>altice</span> one +</div>");
-amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top:107px;left:18px;line-height:1.6;font-size:18px;letter-spacing:-0.4px;'>1 Gig Internet</div>");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top:11px;left:5px;line-height:1.6;font-size:12px;line-height:1;'>Get our next generation technology.</div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top:21px;left:7px;line-height:1.6;font-size:18px;'><span class='AlticeBold'>altice</span> one <span class='AlticeBold' style='font-size:14px;'>+ 1 Gig Internet</span></div>");
+amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
 
 </script>
 <!-- End of overrode asset attributes values -->
@@ -107,7 +107,7 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
         background-color:#e2e3e4;">
     </div>
 
-    <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
+    <div id="ref" class="asset adSizeContainer" data-image="ref"></div>
     <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground"></div>
     <div id="frameImage4" class="asset frameImage" data-image="frameImage3"></div>
     <div id="frameImage3" class="asset frameImage" data-image="frameImage2"></div>
@@ -125,11 +125,11 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top:211px;
-        left:15px;
-        width:91px;
-        height:24px;
-        font-size:12px;
+      style="top:32px;
+        left:239px;
+        width:56px;
+        height:12px;
+        font-size:8px;
         color:#fff;
         opacity:0;">
     </div>
@@ -139,16 +139,16 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       background-color:#fff;
       opacity:1;">
-      <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
+      <div id="ref" class="asset adSizeContainer"data-image="ref"></div>
       <div id="frameText1" class="frameText">!{frameText1}</div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top:211px;
-          left:15px;
-          width:91px;
-          height:24px;
-          font-size:12px;
+        style="top:32px;
+          left:239px;
+          width:56px;
+          height:12px;
+          font-size:8px;
           color:#fff;
           opacity:0;">
       </div>
@@ -163,8 +163,8 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
   <script type="text/javascript">
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 300,
-      height: 250,
+      width: 320,
+      height: 50,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -173,13 +173,13 @@ amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeBold' style='top
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x250_SDL_Logo.png',
-          introLogoImage: 'images/300x250_SDL_Logo.png',
+          logoImage: 'images/320x50_SDL_Logo.png',
+          introLogoImage: 'images/320x50_SDL_Logo.png',
           // priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
-          // ref: 'ref3.png',
+          ref: 'ref3.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
