--- a/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/300x50/300x50.html
+++ b/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/300x50/300x50.html
@@ -24,7 +24,7 @@
     <style media="screen" data-dynamic="style">
       #ad {
         width: 300px;
-        height: 250px;
+        height: 50px;
         font-family: Arial,Helvetica,sans-serif;
         color: #fff;
       }
@@ -77,22 +77,20 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
-amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameBackground","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
-amo.registerAttribute("frameImage2","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
-
-
-amo.registerAttribute("frameText21", "TEXT", "<div style='top:31px;font-size:18px;line-height:1.1;text-align:center;letter-spacing:-0.4px;width:300px;'>Suddenlink is now available<br>in your area</div>");
-amo.registerAttribute("frameText22", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameImage3","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
-amo.registerAttribute("frameText31","TEXT","<div style='top:26px;left:15px;line-height:1.6;font-size:18px;'>Power your</div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:47px;left:15px;line-height:1.6;font-size:18px;'>new home</div>");
-amo.registerAttribute("frameText33","TEXT","&nbsp;");
-amo.registerAttribute("frameImage4","IMAGE","300x250_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
-amo.registerAttribute("frameText41", "TEXT", "<div style='top:30px;left:15px;line-height:1.6;font-size:18px;line-height:1;letter-spacing:-0.4px;'>Get our next<br>generation<br>technology.</div>");
-amo.registerAttribute("frameText42", "TEXT", "<div class='AlticeBold' style='top:84px;left:18px;line-height:1.6;font-size:18px;'>altice one +</div>");
-amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top:107px;left:18px;line-height:1.6;font-size:18px;letter-spacing:-0.4px;'>1 Gig Internet</div>");
+amo.registerAttribute("ctaText","TEXT","Upgrade Now");
+amo.registerAttribute("frameBackground","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
+amo.registerAttribute("frameImage1","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
+amo.registerAttribute("frameImage2","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
+amo.registerAttribute("frameText11", "TEXT", "<div style='top:9px;left:8px;font-size:13px;line-height:1.1;letter-spacing:-0.5px;'>Suddenlink is now<br>available in your area</div>");
+amo.registerAttribute("frameText12", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText13", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText21","TEXT","<div style='top:9px;left:8px;line-height:1.6;font-size:12px;letter-spacing:-0.4px;'>Power your</div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:23px;left:8px;line-height:1.6;font-size:12px;letter-spacing:-0.4px;'>new home</div>");
+amo.registerAttribute("frameText23","TEXT","&nbsp;");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top:11px;left:5px;line-height:1.6;font-size:12px;line-height:1;'>Get our next generation technology.</div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top:21px;left:7px;line-height:1.6;font-size:18px;'><span class='AlticeBold'>altice</span> one <span class='AlticeBold' style='font-size:14px;'>+ 1 Gig Internet</span></div>");
+amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
 
 </script>
 <!-- End of overrode asset attributes values -->
@@ -111,28 +109,27 @@ amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top
 
     <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
     <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground"></div>
-    <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div>
-    <div id="frameImage3" class="asset frameImage" data-image="frameImage3"></div>
-    <div id="frameImage2" class="asset frameImage" data-image="frameImage2"></div>
-
-    <div id="frameText21" class="frameText">!{frameText21}</div>
-    <div id="frameText22" class="frameText">!{frameText22}</div>
-    <div id="frameText23" class="frameText">!{frameText23}</div>
-    <div id="frameText31" class="frameText">!{frameText31}</div>
-    <div id="frameText32" class="frameText">!{frameText32}</div>
-    <div id="frameText33" class="frameText">!{frameText33}</div>
-    <div id="frameText41" class="frameText">!{frameText11}</div>
-    <div id="frameText42" class="frameText">!{frameText12}</div>
-    <div id="frameText43" class="frameText">!{frameText13}</div>
+    <div id="frameImage4" class="asset frameImage" data-image="frameImage3"></div>
+    <div id="frameImage3" class="asset frameImage" data-image="frameImage2"></div>
+    <div id="frameImage2" class="asset frameImage" data-image="frameImage1"></div>
+    <div id="frameText21" class="frameText">!{frameText11}</div>
+    <div id="frameText22" class="frameText">!{frameText12}</div>
+    <div id="frameText23" class="frameText">!{frameText13}</div>
+    <div id="frameText31" class="frameText">!{frameText21}</div>
+    <div id="frameText32" class="frameText">!{frameText22}</div>
+    <div id="frameText33" class="frameText">!{frameText23}</div>
+    <div id="frameText41" class="frameText">!{frameText31}</div>
+    <div id="frameText42" class="frameText">!{frameText32}</div>
+    <div id="frameText43" class="frameText">!{frameText33}</div>
     <div id="logoImage" class="asset adSizeContainer" data-image="logoImage"></div>
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top:211px;
-        left:15px;
-        width:91px;
-        height:24px;
-        font-size:12px;
+      style="top:32px;
+        left:220px;
+        width:56px;
+        height:12px;
+        font-size:8px;
         color:#fff;
         opacity:0;">
     </div>
@@ -147,11 +144,11 @@ amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top:211px;
-          left:15px;
-          width:91px;
-          height:24px;
-          font-size:12px;
+        style="top:32px;
+          left:220px;
+          width:56px;
+          height:12px;
+          font-size:8px;s
           color:#fff;
           opacity:0;">
       </div>
@@ -167,7 +164,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top
     var ad = new Ad({
       root: document.querySelector('#ad'),
       width: 300,
-      height: 250,
+      height: 50,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -176,8 +173,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x250_SDL_Logo.png',
-          introLogoImage: 'images/300x250_SDL_Logo.png',
+          logoImage: 'images/300x50_SDL_Logo.png',
+          introLogoImage: 'images/300x50_SDL_Logo.png',
           // priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
@@ -197,9 +194,10 @@ amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top
         });
 
         textUpdate();
-        // gsap.set('#frameImage1', {scale:1.5});
-        // gsap.set('#frameImage2', {scale:1.5});
-        gsap.set('.frameImage', {x:'100%'});
+        gsap.set('#frameImage2', {scale:1.5});
+        // gsap.set('#frameImage3', {scale:1.5});
+        gsap.set('#frameImage4', {x:'100%'});
+        // gsap.set('.frameImage', {x:'100%'});
         gsap.set('.frameText', {x:'-100%'});
 
         var generalFrameAnimation = function(frame){
@@ -207,32 +205,34 @@ amo.registerAttribute("frameText43", "TEXT", "<div class='AlticeBold' style='top
           .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
+          gsap.to('#cta', {delay:.5, opacity:1});
         }
         var animateFrame4 = function(flag){
           var frameId = 4;
-          gsap.set('#frameBackground', {display: 'block'});
+          // gsap.set('#frameImage2', {display: 'none'});
+          gsap.set('#frameImage2, #frameImage3', {display: 'none'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
+          .to('#frameImage'+frameId, {x:0,y:0, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
         }
         var animateFrame3 = function(flag){
           var frameId = 3;
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
+          gsap.set('#frameImage2', {display: 'none'});
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.1}})
+          .to('#frameImage'+frameId, {duration:1, opacity:1, scale:1, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.1}})
+          .to('#frameImage'+frameId, {delay:1, duration:1, opacity:1, scale:1, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frame1', (flag==true?{}:{delay:0.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
-        if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame4, [true]);
+        gsap.delayedCall(.8, animateFrame1);
       });
     }, 2000);
   </script>
