--- a/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/320x50/320x50_frame3.html
+++ b/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/320x50/320x50_frame3.html
@@ -107,7 +107,7 @@ amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
         background-color:#e2e3e4;">
     </div>
 
-    <div id="ref" class="asset adSizeContainer" data-image="ref"></div>
+    <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
     <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground"></div>
     <div id="frameImage4" class="asset frameImage" data-image="frameImage3"></div>
     <div id="frameImage3" class="asset frameImage" data-image="frameImage2"></div>
@@ -179,7 +179,7 @@ amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
-          ref: 'ref3.png',
+          // ref: 'ref3.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
