--- a/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/300x50/300x50_frame1.html
+++ b/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/300x50/300x50_frame1.html
@@ -81,7 +81,7 @@ amo.registerAttribute("ctaText","TEXT","Upgrade Now");
 amo.registerAttribute("frameBackground","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
 amo.registerAttribute("frameImage1","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
 amo.registerAttribute("frameImage2","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameText11", "TEXT", "<div style='top:9px;left:8px;font-size:13px;line-height:1.1;letter-spacing:-0.5px;'>Suddenlink is now<br>available in your area</div>");
 amo.registerAttribute("frameText12", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText13", "TEXT", "&nbsp;");
@@ -232,8 +232,13 @@ amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frame1', (flag==true?{}:{duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
-        if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame2, [true]);
+        gsap.delayedCall(.8, animateFrame1, [true]);
+      });
+    }, 2000);
+  </script>
+</body>
+</html>
+imateFrame2, [true]);
       });
     }, 2000);
   </script>
