--- a/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/300x50/300x50_frame3.html
+++ b/A/Altice/Altice_JanuaryNewBuild_2020/ads/SDL_BRD_AO_AO1Gig/300x50/300x50_frame3.html
@@ -81,7 +81,7 @@ amo.registerAttribute("ctaText","TEXT","Upgrade Now");
 amo.registerAttribute("frameBackground","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Bg.png");
 amo.registerAttribute("frameImage1","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame01.png");
 amo.registerAttribute("frameImage2","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","300x50_SDL_NewBuild_BRD_AO_AO1Gig_NA_Mov_West_DCO_Img_Frame03_Screens.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameText11", "TEXT", "<div style='top:9px;left:8px;font-size:13px;line-height:1.1;letter-spacing:-0.5px;'>Suddenlink is now<br>available in your area</div>");
 amo.registerAttribute("frameText12", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText13", "TEXT", "&nbsp;");
