--- a/M/Microsoft/Microsoft_Office_New_Year/ads/160x600/z160x600.html
+++ b/M/Microsoft/Microsoft_Office_New_Year/ads/160x600/z160x600.html
@@ -132,7 +132,7 @@
         };
         window.getBannerData = function(){ var obj = {}; for(var i in bannerData) { obj[i] = bannerData[i]; } return obj; }
       }
-      loadData();
+      window.onload = loadData;
     </script>
   </body>
 </html>
