--- a/M/Microsoft/Microsoft_Office_New_Year/ads/300x600/ExcelBudgeting/O365_NewYearCampaign_USA_300x600_BAN_Excel_Budgeting_English_NA_NA_ANI_NA_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_New_Year/ads/300x600/ExcelBudgeting/O365_NewYearCampaign_USA_300x600_BAN_Excel_Budgeting_English_NA_NA_ANI_NA_NA_1.htm
@@ -122,6 +122,8 @@ function handleComplete(evt,comp) {
 			layers.cta.arrow.arrow_1.regX = 0;
 			layers.cta.arrow.arrow.regX = 0;
 			layers.cta.arrow.regX = 0;
+			layers.cta.regX = 0;
+			layers.txtCta.regX = 0;
 			layers.cta.children[0].x = 0;
 			layers.cta.children[0].y = 0;
 			layers.cta.children[0].regX = 0;
