--- a/M/Microsoft/Microsoft_Office_New_Year/ads/728x90/z728x90.html
+++ b/M/Microsoft/Microsoft_Office_New_Year/ads/728x90/z728x90.html
@@ -31,13 +31,19 @@
         ];
 
         if(contentD && contentD.length) { contentD.forEach(function(data) { amo.registerContent(data); }); }
-        amo.registerVariation("layout", "WordResume");
-        amo.registerVariation("textField1", "['<#2f2f2f>Rock','17px',307,34,'28.5','350', 'left']^['<#2f2f2f>your','17px',348.5,34,'28.5','350', 'left']");
-        amo.registerVariation("textField2", "['<#2f2f2f>with','17px',307,34,'28.5','350', 'left']^['<#2f2f2f>AI','17px',307,34,'28.5','350', 'left']");
-        amo.registerVariation("textField3", "['<#2f2f2f>-powered','17px',323,34,'28.5','350', 'left']^['<#2f2f2f>in','17px',307,34,'28.5','350', 'left']");
-        amo.registerVariation("textField4", "['<#2f2f2f>Word','17px',325,34,'28.5','350', 'left']");
-        amo.registerVariation("textField5", "['<#2f2f2f>resume','17px',388,34,'28.5','350', 'left']^['<#2f2f2f>features','17px',402,34,'28.5','350', 'left']");
-        amo.registerVariation("textField6", "['<#2f2f2f>New Year, New You','17.4px',306,17,'22','350', 'left']^['<#2f2f2f>Rock your resume with AI-powered features, plus 1 TB of |cloud storage','11.2px',306,45,'13.5','350', 'left']");
+        amo.registerVariation("layout", "ExcelBudgeting");
+        // amo.registerVariation("textField1", "['<#2f2f2f>Rock','17px',307,34,'28.5','350', 'left']^['<#2f2f2f>your','17px',348.5,34,'28.5','350', 'left']");
+        // amo.registerVariation("textField2", "['<#2f2f2f>with','17px',307,34,'28.5','350', 'left']^['<#2f2f2f>AI','17px',307,34,'28.5','350', 'left']");
+        // amo.registerVariation("textField3", "['<#2f2f2f>-powered','17px',323,34,'28.5','350', 'left']^['<#2f2f2f>in','17px',307,34,'28.5','350', 'left']");
+        // amo.registerVariation("textField4", "['<#2f2f2f>Word','17px',325,34,'28.5','350', 'left']");
+        // amo.registerVariation("textField5", "['<#2f2f2f>resume','17px',388,34,'28.5','350', 'left']^['<#2f2f2f>features','17px',402,34,'28.5','350', 'left']");
+        // amo.registerVariation("textField6", "['<#2f2f2f>New Year, New You','17.4px',306,17,'22','350', 'left']^['<#2f2f2f>Rock your resume with AI-powered features, plus 1 TB of |cloud storage','11.2px',306,45,'13.5','350', 'left']");
+        amo.registerVariation("textField1", "['<#2f2f2f>Manage your finances^all-year-round^with^budget-tracking^templates^in Excel','17px',306,33,'28.5','350', 'left']");
+        amo.registerVariation("textField2", "['<#2f2f2f>New Year, New You','17.4px',306,17,'22','350', 'left']");
+        amo.registerVariation("textField3", "['<#2f2f2f>Manage your budget all-year-round with Excel templates, |plus 1 TB of cloud storage','11.2px',306,45,'13.5','350', 'left']");
+        amo.registerVariation("textField4", "na");
+        amo.registerVariation("textField5", "na");
+        amo.registerVariation("textField6", "na");
         amo.registerVariation("ctaText", "TRY FOR FREE");
         // amo.registerVariation("ctaArrowVisibleFlag", "!{passthroughfield2}");
         amo.registerVariation("impressionTracker", "../../../../1x1.png?impressionTracker=" + Math.random());
