--- a/M/Microsoft/Microsoft_Office_New_Year/ads/300x250/ExcelBudgeting/O365_NewYearCampaign_USA_300x250_BAN_Excel_Budgeting_English_NA_NA_ANI_NA_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_New_Year/ads/300x250/ExcelBudgeting/O365_NewYearCampaign_USA_300x250_BAN_Excel_Budgeting_English_NA_NA_ANI_NA_NA_1.htm
@@ -109,6 +109,29 @@ function handleComplete(evt,comp) {
         startBanner()
     }
 		TweenMax.delayedCall(0.2,function(){
+			var introAlignment = function(){
+				var adWidth = 300;
+				var totalWidth1 = exportRoot.headline1[0].children[0].getMeasuredWidth()+exportRoot.headline2[0].children[0].getMeasuredWidth()+exportRoot.headline3[0].children[0].getMeasuredWidth();
+				exportRoot.headline1[0].x = (adWidth - totalWidth1)/2;
+				exportRoot.headline2[0].x = exportRoot.headline1[0].x + exportRoot.headline1[0].children[0].getMeasuredWidth();
+				exportRoot.headline3[0].x = exportRoot.headline2[0].x + exportRoot.headline2[0].children[0].getMeasuredWidth();
+
+				var totalWidth2 = exportRoot.headline4[0].children[0].getMeasuredWidth()+exportRoot.headline5[0].children[0].getMeasuredWidth();
+				exportRoot.headline4[0].x = (adWidth - totalWidth2)/2;
+				exportRoot.headline5[0].x = exportRoot.headline4[0].x + exportRoot.headline4[0].children[0].getMeasuredWidth();
+
+				exportRoot.headline6[0].x = (adWidth - exportRoot.headline6[0].children[0].getMeasuredWidth())/2;
+
+				var totalWidth3 = exportRoot.headline7[0].children[0].getMeasuredWidth()+exportRoot.headline8[0].children[0].getMeasuredWidth();
+				exportRoot.headline7[0].x = (adWidth - totalWidth3)/2;
+				exportRoot.headline8[0].x = exportRoot.headline7[0].x + exportRoot.headline7[0].children[0].getMeasuredWidth();
+
+				exportRoot.headline9[0].x = (adWidth - exportRoot.headline9[0].children[0].getMeasuredWidth())/2;
+
+				var totalWidth4 = exportRoot.headline10[0].children[0].getMeasuredWidth()+exportRoot.headline11[0].children[0].getMeasuredWidth();
+				exportRoot.headline10[0].x = (adWidth - totalWidth4)/2;
+				exportRoot.headline11[0].x = exportRoot.headline10[0].x + exportRoot.headline10[0].children[0].getMeasuredWidth();
+			}
         var ctaAlignment = function(position){
 			position = position ? position : 'left';
 			var layers = exportRoot.mainMC;
@@ -145,19 +168,24 @@ function handleComplete(evt,comp) {
         var iframe = window.frameElement;
 		var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
 		var bannerData = parentWindow.getBannerData();
-		bannerData.headline1 = eval(bannerData.textField1.split('^')[0]);
-		bannerData.headline2 = eval(bannerData.textField1.split('^')[1]);
-		bannerData.headline3 = eval(bannerData.textField2.split('^')[0]);
-		bannerData.headline4 = eval(bannerData.textField2.split('^')[1]);
-		bannerData.headline5 = eval(bannerData.textField3.split('^')[0]);
-		bannerData.headline6 = eval(bannerData.textField3.split('^')[1]);
-		bannerData.headline7 = eval(bannerData.textField4.split('^')[0]);
-		bannerData.headline8 = eval(bannerData.textField4.split('^')[1]);
-		bannerData.headline9 = eval(bannerData.textField5.split('^')[0]);
-		bannerData.headline10 = eval(bannerData.textField5.split('^')[1]);
-		bannerData.headline11 = eval(bannerData.textField6.split('^')[0]);
-		bannerData.headline12 = eval(bannerData.textField6.split('^')[1]);
-		bannerData.headline13 = eval(bannerData.textField6.split('^')[2]);
+		var introText = eval(bannerData.textField1)[0];
+		var introColor = introText.match(/\<(.*?)\>/g)[0];
+		var introContent = introText.split(introColor)[1];
+		var introValues = introContent.split('^');
+		var getValue = function(index) { return eval(bannerData.textField1.split(introContent).join((typeof index != 'undefined' && index in introValues ? introValues[index] : ' '))); }
+		bannerData.headline1 = getValue(0);
+		bannerData.headline2 = getValue();
+		bannerData.headline3 = getValue();
+		bannerData.headline4 = getValue(1);
+		bannerData.headline5 = getValue();
+		bannerData.headline6 = getValue(2);
+		bannerData.headline7 = getValue(3);
+		bannerData.headline8 = getValue();
+		bannerData.headline9 = getValue(4);
+		bannerData.headline10 = getValue(5);
+		bannerData.headline11 = getValue();
+		bannerData.headline12 = eval(bannerData.textField2);
+		bannerData.headline13 = eval(bannerData.textField3);
 		bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"12px",3,1,"50","300", "center"] : '';
 		animation_container.addEventListener("click", function(){
 			parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
@@ -180,6 +208,7 @@ function handleComplete(evt,comp) {
 		}
         exportRoot.initBanner(bannerData)
 		ctaAlignment('left')
+		// introAlignment();
         exportRoot.runBanner()
     })
 	initReady=true
